cmake_minimum_required(VERSION 3.22)
set(FILES main.cpp)
set (LIBS gps_serial TinyGPS)
set(include_dirs include)
#set(Boost_INCLUDE_DIR "/media/jok3r/0c8aed27-573e-4ed6-acb9-bd13e9be4906/boost_1_81_0")
#set(CMAKE_C_COMPILER "/home/jok3r/x-tools/aarch64-rpi4-linux-gnu/bin/aarch64-rpi4-linux-gnu-gcc")
#set(CMAKE_CXX_COMPILER "/home/jok3r/x-tools/aarch64-rpi4-linux-gnu/bin/aarch64-rpi4-linux-gnu-g++")
#set(CMAKE_ASM_COMPILER "/home/jok3r/x-tools/aarch64-rpi4-linux-gnu/bin/aarch64-rpi4-linux-gnu-gcc")
#set(CMAKE_OBJCOPY "/home/jok3r/x-tools/aarch64-rpi4-linux-gnu/bin/aarch64-rpi4-linux-gnu-objcopy")
project(GPS_serial_transciever)
add_subdirectory(include)
add_subdirectory(TinyGPSPlus_)
add_executable(${PROJECT_NAME} ${FILES})
target_include_directories(${PROJECT_NAME} PRIVATE ${include_dirs})
target_link_libraries(${PROJECT_NAME} ${LIBS})