cmake_minimum_required(VERSION 3.22)
set(FILES main.cpp)
set (LIBS gps_serial TinyGPS someipservice)
set(dependencies_dirs dependencies ./GPSserial dependencies/someipService ./)
project(GPS_serial_transciever)
add_subdirectory(GPSserial)
add_subdirectory(dependencies/someipService)
add_subdirectory(dependencies/TinyGPSPlus_)
add_executable(${PROJECT_NAME} ${FILES})
target_include_directories(${PROJECT_NAME} PRIVATE ${dependencies_dirs})
target_link_libraries(${PROJECT_NAME} ${LIBS})